--- a/saturn.css
+++ b/saturn.css
@@ -17,6 +17,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  animation: titanfloat 2s ease infinite alternate;
 }
 
 .titan::before,
@@ -34,4 +35,10 @@ body {
   0% { transform: scaleY(1) }
   1% { transform: scaleY(0.1) }
   2% { transform: scaleY(1) }
+}
+
+@keyframes titanfloat {
+  0% {transform: translate(0);}
+  50% {transform: translate(260px, 50px);}
+  100% {transform: translate(460px, 10px);}
 }
